Add ASEBA to code demo

--- a/demos/code/index.html
+++ b/demos/code/index.html
@@ -11,6 +11,15 @@
   <script src="../../javascript_compressed.js"></script>
   <script src="../../python_compressed.js"></script>
   <script src="../../dart_compressed.js"></script>
+  <script src="../../generators/aseba.js"></script>
+  <script src="../../generators/aseba/logic.js"></script>
+  <script src="../../generators/aseba/loops.js"></script>
+  <script src="../../generators/aseba/math.js"></script>
+  <script src="../../generators/aseba/text.js"></script>
+  <script src="../../generators/aseba/lists.js"></script>
+  <script src="../../generators/aseba/colour.js"></script>
+  <script src="../../generators/aseba/variables.js"></script>
+  <script src="../../generators/aseba/procedures.js"></script>
   <script src="code.js"></script>
 </head>
 <body>
@@ -38,6 +47,8 @@
             <td class="tabmin">&nbsp;</td>
             <td id="tab_dart" class="taboff">Dart</td>
             <td class="tabmin">&nbsp;</td>
+            <td id="tab_aseba" class="taboff">ASEBA</td>
+            <td class="tabmin">&nbsp;</td>
             <td id="tab_xml" class="taboff">XML</td>
             <td class="tabmax">
               <button id="trashButton" class="notext" title="...">
@@ -63,6 +74,7 @@
   <pre id="content_javascript" class="content"></pre>
   <pre id="content_python" class="content"></pre>
   <pre id="content_dart" class="content"></pre>
+  <pre id="content_aseba" class="content"></pre>
   <textarea id="content_xml" class="content" wrap="off"></textarea>
 
   <xml id="toolbox" style="display: none">
